--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
   },
   "devDependencies": {
     "@types/node": "^22.13.10",
+    "@types/normalize-wheel": "^1.0.4",
     "@types/three": "^0.174.0",
     "typescript": "~5.7.2",
     "vite": "^6.2.0"
   },
   "dependencies": {
+    "gsap": "^3.12.7",
     "lil-gui": "^0.20.0",
     "load-bmfont": "^1.4.2",
+    "normalize-wheel": "^1.0.1",
     "three": "^0.174.0",
     "three-bmfont-text": "^3.0.1",
     "vite-plugin-glsl": "^1.3.3"
